--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
   sdk: '>=2.16.1 <3.0.0'
 
 dependencies:
+  bloc: ^8.0.3
   carousel_slider: ^4.0.0
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
