--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.fvm/
 # Miscellaneous
 *.class
 *.log
@@ -16,7 +17,7 @@
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
-# VS Code which you may wish to be included in version control, so this line
+# VS Code which you may wish to be included in version control, so this lin
 # is commented out by default.
 #.vscode/
 
